--- a/index.html
+++ b/index.html
@@ -29,58 +29,39 @@
         	</div>
         </section>
 
-        <ul class="deck">
-            <li class="card">
-                <i class="fa fa-diamond"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-paper-plane-o"></i>
-            </li>
-            <li class="card match">
-                <i class="fa fa-anchor"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bolt"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-cube"></i>
-            </li>
-            <li class="card match">
-                <i class="fa fa-anchor"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-leaf"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bicycle"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-diamond"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bomb"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-leaf"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bomb"></i>
-            </li>
-            <li class="card open show">
-                <i class="fa fa-bolt"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bicycle"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-paper-plane-o"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-cube"></i>
-            </li>
+        <ul class="deck"> 
         </ul>
-    </div>
+    </div> 
 
     <script src="js/app.js"></script>
+    <script src="lib/jquery-3.2.1.min.js"></script>
+    <script>  
+        $(function(){ 
+            var deck=$('.deck');
+
+            function init(){
+                app.restart();
+                deck.empty();
+                for (let index = 0; index < app.getCards().length; index++) {
+                    const element = app.getCards()[index];
+                    deck.append(`<li class="card show" data-index="${index}">
+                    <i class="fa fa-${element.symbol}" data-index="${index}"></i>
+                    </li>`);
+                } 
+            } 
+
+            deck.click(function(e){
+                const index=$(target).data('index'); 
+
+            });
+
+            $('.restart').click(function(){
+                init();
+            });
+
+            init();
+        });
+        
+    </script>
 </body>
 </html>
