--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
         </header>
 
         <section class="score-panel">
-        	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
+        	<ul class="stars"> 
         	</ul>
 
         	<span class="moves">3</span> Moves
@@ -33,33 +30,71 @@
         </ul>
     </div> 
 
-    <script src="js/app.js"></script>
     <script src="lib/jquery-3.2.1.min.js"></script>
+    <script src="js/Card.js"></script>
+    <script src="js/binder.js"></script>
+    <script src="js/app.js"></script>
     <script>  
         $(function(){ 
-            var deck=$('.deck');
+            const deck=$('.deck');
+            const game=new app.App();
 
-            function init(){
-                app.restart();
+            function start(){
+                binder.simpleBind(game,'moveCounter',value=>{
+                    $('.moves').text(value);
+                });
+
+                binder.simpleBind(game,'grade',value=>{
+                    $('.stars').empty();
+                    if (value<=0)  return;
+                    for (let index = 0; index < value; index++) {
+                        $('.stars').append('<li><i class="fa fa-star"></i></li>'); 
+                    } 
+                });
+
+                binder.simpleBind(game,'win',value=>{
+                    if (value) alert('win');
+                });
+
                 deck.empty();
-                for (let index = 0; index < app.getCards().length; index++) {
-                    const element = app.getCards()[index];
-                    deck.append(`<li class="card show" data-index="${index}">
-                    <i class="fa fa-${element.symbol}" data-index="${index}"></i>
-                    </li>`);
+                game.restart();
+                
+                for (let index = 0; index < game.getCards().length; index++) {
+                    (function(index){
+                        const element = game.getCards()[index];
+                        deck.append(`<li class="card show" data-index="${index}" id="card${index}">
+                        <i class="fa fa-${element.symbol}" data-index="${index}"></i>
+                        </li>`);
+                        binder.simpleBind(element,'show',value=>{
+                            if (value){
+                                $(`#card${index}`).addClass('open');
+                            } else {
+                                setTimeout(()=>{ $(`#card${index}`).removeClass('open'); },1000); 
+                            } 
+                        });
+
+                        binder.simpleBind(element,'matched',value=>{
+                            if (value){
+                                $(`#card${index}`).removeClass('open show').addClass('match');
+                            } else {
+                                setTimeout(()=>{ $(`#card${index}`).removeClass('open show match'); },1000); 
+                            } 
+                        });
+
+                    })(index); 
                 } 
-            } 
+            }  
 
             deck.click(function(e){
-                const index=$(target).data('index'); 
-
+                const index=$(e.target).data('index'); 
+                game.cardsClickEventHandler(index);
             });
 
             $('.restart').click(function(){
-                init();
+                start();
             });
 
-            init();
+            start();
         });
         
     </script>
