Feature: 3 stars contain the stars solid and empty,  adjusts fliping speed  of the cards
Signed-off-by: duzeng <duzengrass@163.com>

--- a/index.html
+++ b/index.html
@@ -100,11 +100,14 @@
                 // bind grade
                 binder.simpleBind(game,'grade',value=>{
                     $('.stars').empty();
-                    if (value<=0)  return;
- 
+                    if (value<0)  return;
+                    
                     for (let index = 0; index < value; index++) {
                         $('.stars').append('<li><i class="fa fa-star"></i></li>'); 
                     } 
+                    for (let index = 0; index < game.getMaxGrade()-value; index++) {
+                        $('.stars').append('<li><i class="fa fa-star-o"></i></li>'); 
+                    }
                 });
 
                 //bind success state
